@@ -2,15 +2,20 @@ package com.talkwithneighbors.controller;
 
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.talkwithneighbors.dto.CreateRoomRequest;
+import com.talkwithneighbors.dto.ChatRoomDto;
 import com.talkwithneighbors.entity.ChatRoom;
 import com.talkwithneighbors.entity.ChatRoomType;
-import com.talkwithneighbors.entity.Message;
+import com.talkwithneighbors.dto.MessageDto;
 import com.talkwithneighbors.entity.User;
 import com.talkwithneighbors.exception.ChatException;
 import com.talkwithneighbors.security.UserSession;
 import com.talkwithneighbors.service.ChatService;
 import com.talkwithneighbors.service.RedisSessionService;
 import com.talkwithneighbors.service.UserService;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageImpl;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
@@ -37,6 +42,9 @@ import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.
 
 import org.springframework.boot.test.autoconfigure.web.servlet.WebMvcTest;
 import org.springframework.context.annotation.ComponentScan;
+import com.talkwithneighbors.dto.ChatMessageDto;
+import static org.mockito.ArgumentMatchers.anyList;
+import static org.mockito.ArgumentMatchers.anyLong;
 
 @WebMvcTest(
     controllers = ChatController.class,
@@ -101,8 +109,13 @@ class ChatControllerTest {
     @DisplayName("채팅방 생성 성공 테스트")
     void createRoomSuccess() throws Exception {
         // given
-        when(chatService.createRoom(anyString(), any(User.class), any(ChatRoomType.class), any()))
-                .thenReturn(testRoom);
+        ChatRoomDto roomDto = new ChatRoomDto();
+        roomDto.setId(testRoom.getId());
+        roomDto.setRoomName(testRoom.getName());
+        roomDto.setType(testRoom.getType());
+        when(chatService.createRoom(
+                anyString(), any(ChatRoomType.class), anyString(), anyList()))
+            .thenReturn(roomDto);
 
         // when & then
         mockMvc.perform(post("/api/chat/rooms")
@@ -118,22 +131,34 @@ class ChatControllerTest {
     @DisplayName("채팅방 목록 조회 성공 테스트")
     void getRoomsSuccess() throws Exception {
         // given
-        List<ChatRoom> rooms = Arrays.asList(testRoom);
-        when(chatService.getRoomsByUser(any(User.class))).thenReturn(rooms);
+        ChatRoomDto roomDto = new ChatRoomDto();
+        roomDto.setId(testRoom.getId());
+        roomDto.setRoomName(testRoom.getName());
+        roomDto.setType(testRoom.getType());
+        Page<ChatRoomDto> page = new PageImpl<>(List.of(roomDto));
+        when(chatService.getChatRoomsForUser(anyString(), any(Pageable.class)))
+            .thenReturn(page);
 
         // when & then
         mockMvc.perform(get("/api/chat/rooms")
+                .param("page", "0")
+                .param("size", "20")
                 .sessionAttr("USER_SESSION", userSession))
                 .andExpect(status().isOk())
-                .andExpect(jsonPath("$[0].id").value(testRoom.getId()))
-                .andExpect(jsonPath("$[0].roomName").value(testRoom.getName()));
+                .andExpect(jsonPath("$.content[0].id").value(testRoom.getId()))
+                .andExpect(jsonPath("$.content[0].roomName").value(testRoom.getName()));
     }
 
     @Test
     @DisplayName("채팅방 상세 조회 성공 테스트")
     void getRoomSuccess() throws Exception {
         // given
-        when(chatService.getRoom(anyString(), any(User.class))).thenReturn(testRoom);
+        ChatRoomDto roomDto = new ChatRoomDto();
+        roomDto.setId(testRoom.getId());
+        roomDto.setRoomName(testRoom.getName());
+        roomDto.setType(testRoom.getType());
+        when(chatService.getRoomById(anyString(), anyString()))
+            .thenReturn(roomDto);
 
         // when & then
         mockMvc.perform(get("/api/chat/rooms/{roomId}", testRoom.getId())
@@ -147,7 +172,7 @@ class ChatControllerTest {
     @DisplayName("채팅방 참여 성공 테스트")
     void joinRoomSuccess() throws Exception {
         // given
-        doNothing().when(chatService).joinRoom(anyString(), any(User.class));
+        doNothing().when(chatService).joinRoom(anyString(), anyString());
 
         // when & then
         mockMvc.perform(post("/api/chat/rooms/{roomId}/join", testRoom.getId())
@@ -159,8 +184,14 @@ class ChatControllerTest {
     @DisplayName("채팅방 나가기 성공 테스트")
     void leaveRoomSuccess() throws Exception {
         // given
-        when(chatService.getRoom(anyString(), any(User.class))).thenReturn(testRoom);
-        doNothing().when(chatService).leaveRoom(anyString(), any(User.class));
+        ChatRoomDto roomDto = new ChatRoomDto();
+        roomDto.setId(testRoom.getId());
+        roomDto.setRoomName(testRoom.getName());
+        roomDto.setType(testRoom.getType());
+        roomDto.setCreatorId("2"); // simulate creator is other
+        when(chatService.getRoomById(anyString(), anyString()))
+            .thenReturn(roomDto);
+        doNothing().when(chatService).leaveRoom(anyString(), anyString());
 
         // when & then
         mockMvc.perform(post("/api/chat/rooms/{roomId}/leave", testRoom.getId())
@@ -172,19 +203,13 @@ class ChatControllerTest {
     @DisplayName("메시지 목록 조회 성공 테스트")
     void getMessagesSuccess() throws Exception {
         // given
-        Message message = new Message();
-        message.setId("test-message-id");
-        message.setContent("Test message");
-        message.setSender(testUser);
-        message.setChatRoom(testRoom);
-        message.setCreatedAt(LocalDateTime.now());
-        message.setType(Message.MessageType.TEXT);
-        message.setReadByUsers(new java.util.HashSet<>()); // NPE 방지
-        message.setUpdatedAt(message.getCreatedAt()); // updatedAt 명확히 지정
-        message.setDeleted(false); // isDeleted 명확히 지정
-
-        List<Message> messages = Arrays.asList(message);
-        when(chatService.getMessages(anyString(), anyInt(), anyInt())).thenReturn(messages);
+        MessageDto messageDto = new MessageDto();
+        messageDto.setId("test-message-id");
+        messageDto.setContent("Test message");
+        
+        Page<MessageDto> msgPage = new PageImpl<>(List.of(messageDto));
+        when(chatService.getMessagesByRoomId(anyString(), anyString(), any(Pageable.class)))
+            .thenReturn(msgPage);
 
         // when & then
         mockMvc.perform(get("/api/chat/rooms/{roomId}/messages", testRoom.getId())
@@ -192,22 +217,37 @@ class ChatControllerTest {
                 .param("size", "20")
                 .sessionAttr("USER_SESSION", userSession))
                 .andExpect(status().isOk())
-                .andExpect(jsonPath("$[0].id").value(message.getId()))
-                .andExpect(jsonPath("$[0].content").value(message.getContent()));
+                .andExpect(jsonPath("$.content[0].id").value("test-message-id"))
+                .andExpect(jsonPath("$.content[0].content").value("Test message"));
+    }
+
+    @Test
+    @DisplayName("메시지 전송 성공 테스트")
+    void postMessageSuccess() throws Exception {
+        ChatMessageDto requestDto = new ChatMessageDto();
+        requestDto.setContent("Hello");
+        MessageDto responseDto = new MessageDto();
+        responseDto.setId("msg-1");
+        responseDto.setContent("Hello");
+        when(chatService.sendMessage(anyString(), anyLong(), anyString()))
+            .thenReturn(responseDto);
+
+        mockMvc.perform(post("/api/chat/rooms/{roomId}/messages", testRoom.getId())
+                .contentType(MediaType.APPLICATION_JSON)
+                .content(objectMapper.writeValueAsString(requestDto))
+                .sessionAttr("USER_SESSION", userSession))
+            .andExpect(status().isOk())
+            .andExpect(jsonPath("$.id").value("msg-1"))
+            .andExpect(jsonPath("$.content").value("Hello"));
     }
 
     @Test
     @DisplayName("메시지 읽음 표시 성공 테스트")
     void markMessageAsReadSuccess() throws Exception {
-        // given
-        String messageId = "test-message-id";
-        doNothing().when(chatService).markMessageAsRead(anyString(), any(User.class));
-
-        // when & then
-        mockMvc.perform(post("/api/chat/rooms/{roomId}/messages/read", testRoom.getId())
-                .param("messageId", messageId)
+        doNothing().when(chatService).markMessageAsRead(anyString(), anyString());
+        mockMvc.perform(post("/api/chat/rooms/{roomId}/messages/{messageId}/read", testRoom.getId(), "msg-1")
                 .sessionAttr("USER_SESSION", userSession))
-                .andExpect(status().isOk());
+            .andExpect(status().isOk());
     }
 
     @Test
